moves modified nav styles from layout to nav and fixes logo z-index issue

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -27,6 +27,7 @@ body {
   }
   #mainWrap {
   	@include container();
+  	position: relative;
   	background: rgba(73, 155, 255, 0.5);
   }
   #wrapA {
@@ -35,10 +36,11 @@ body {
   }
   #wrapB {
   	@include span(11 of 16);
-  	background: $light;
+  	position: relative;
   	padding: 0;
-  	box-shadow: -.3125em 0 .7em rgba(0,0,0,0.2),
-  	            .3125em 0 .7em rgba(0,0,0,0.2);
+  	background: #fff;
+  	box-shadow: -.3125em 0 .5em rgba(0,0,0,0.2),
+  	            .3125em 0 .5em rgba(0,0,0,0.2);
     z-index: 10;
   }
   #mainContent {
@@ -53,7 +55,6 @@ body {
   }
   #wrapB {
   	@include span(12 of 16);
-  	background: $light;
   	padding: 0;
   }
   #mainContent {
@@ -64,120 +65,11 @@ body {
   
 }//medium breakpoint
 
-
-.imgNav {
-  $animSpeed: .5s;
-  font-family: $sansfont;
-  @include deviceBreakpoint(small) {
-    &.squares {
-      @include visuallyhidden;
-    }
+@include deviceBreakpoint(large) {
+  h1.top {
+    margin: .4em 0 .6em 0;
+    font-size: 2.8em;
+    font-weight: $normal;
+    line-height: 1.2;
   }
-  
-  @include deviceBreakpoint(mobile) {
-    &.squares {
-      margin: 2em (-$mobilePadding - 1%) 4em (-$mobilePadding - 1%);
-    }
-  }
-  
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    @extend %clearfix;
-  }
-  &.stacked ul {
-    padding: 0 8%;
-  }
-  
-  li {
-    overflow: hidden;
-  }
-  
-  &.stacked li {
-    margin-top: 1em;
-    transition: $animSpeed transform;
-  }
-    &.stacked li:hover {
-      transform: translate(.5em, 0);
-    }
-  
-  &.squares li {
-   width: 50%;
-   float: left;
-   margin: 0; padding: 0;
-  }
-  &.squares li:nth-child(3) {
-    clear: left;
-  }
-  a {
-    display: block;
-    position: relative;
-    padding-bottom: 53%;
-    overflow: hidden;
-  }
-  span {
-    position: absolute;
-    width: 90%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    text-align: center;
-    color: $light;
-    transition: $animSpeed color;
-    text-transform: lowercase;
-    @include textStroke;
-  }
-    a:hover span {
-      color: $light;
-    }
-    
-  a:before {
-    content: " ";
-    @extend %absFull;
-    background-image: url("../img/nav-sprite.jpg");
-    background-clip: padding-box;
-    filter: blur(1px) grayscale(1) brightness(0.9);
-    background-repeat: no-repeat;
-    background-size: 100% auto;
-    transition: $animSpeed -webkit-filter;
-  }
-    &.stacked a:before {
-      border: 2px solid $lightGreen;
-      border-radius: $radiusDefault;
-    }
-    a:hover:before {
-      filter: blur(0) grayscale(0) brightness(1);
-    }
-    a:active:before {
-      filter: blur(0) grayscale(0) brightness(1);
-    }
-  //tints bg img
-  a:after {
-    content: " ";
-    @extend %absFull;
-    background-color: rgba(110, 175, 255, 0.3);
-    background-clip: padding-box;
-    transition: $animSpeed background-color;
-  }
-    &.stacked a:after {
-      border: 2px solid $lightGreen;
-      border-radius: $radiusDefault;
-    }
-    a:hover:after {
-      background-color: rgba(127, 178, 240, 0);
-    }
-  
-  
-  
-  li.questions a:before {
-    background-position: 0 33.3%;
-  }
-  li.about a:before {
-    background-position: 0 66.6%;
-  }
-  li.contact a:before {
-    background-position: 0 100%;
-  }
-}
+}//large breakpoint
